# coral-dev

./: .gitignore  404.html  CLAUDE.md  README.md  README_ja.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  docs-preview.yml
apps/coremark/: CMakeLists.txt
apps/face-sharp/: CMakeLists.txt
apps/face-sharp/models/: .gitignore  convert_espcn.py
apps/face-sharp/src/: benchmark_sr.py  face_sharp.py
apps/hello_world/: CMakeLists.txt
apps/hello_world/src/: main.c
apps/pycoral-benchmark/: CMakeLists.txt
apps/pycoral-benchmark/src/: imprinting_benchmark.py  inference_benchmark.py  online_imprinting_benchmark.py  softmax_regression_benchmark.py
apps/pycoral-examples/: CMakeLists.txt
apps/pycoral-examples/src/: backprop_last_layer.py  classify_image.py  detect_image.py  imprinting_learning.py  movenet_pose_estimation.py  semantic_segmentation.py  small_object_detection.py
cmake/: coral-deploy.cmake  setup-toolchain.sh  toolchain-coral-aarch64.cmake
cmake/scripts/: deploy.sh  resolve-ip.sh  run.sh
development/coremark/: index.html
development/hello_world/: index.html
development/pycoral_benchmark/: index.html
development/pycoral_examples/: index.html
docs/en/: index.md
docs/en/development/: coremark.md  hello_world.md  pycoral_benchmark.md  pycoral_examples.md
docs/en/setup/: getting_started.md  sd_home.md
docs/en/technical/: display_image.md
docs/ja/: index.md
en/: index.html
pr-preview/pr-1/: 404.html  index.html  sitemap.xml
pr-preview/pr-2/: 404.html  index.html  sitemap.xml
pr-preview/pr-3/: 404.html  index.html  sitemap.xml
pr-preview/pr-4/: 404.html  index.html  sitemap.xml
pr-preview/pr-5/: 404.html  index.html  sitemap.xml
pr-preview/pr-6/: 404.html  index.html  sitemap.xml
pr-preview/pr-7/: 404.html  index.html  sitemap.xml
scripts/: resolve-ip.sh  run.sh
search/: search_index.json
setup/getting_started/: index.html
setup/sd_home/: index.html
technical/display_image/: index.html
(+95 files in other folders)
